# finallyyyy

./: .gitignore  AVANCEE_SESSION.md  CHANGELOG.md  COMMIT_FINAL_SESSION3.md  CONFLIT_RESOLU_APP_ROUTER.md  CORRECTIONS_LAYOUT_CHART.md  DEVELOPER_HANDBOOK.md  FEATURES_COMPLETE.md  INTEGRATION_PLAN.md  INTERFACE_AMELIOREE.md  INTERFACE_FORMULAIRE_COMPLETE.md  RAPPORT_PROJET_COMPLET.md  README.md  RESET_BUTTON_IMPLEMENTATION.md  RESUME_PROFILS_MC.md  SESSION_3_COMPLETE.md  SESSION_4_READY.md  SESSION_ALPHA_COMPLETE.md  SESSION_ALPHA_PHILOSOPHIE_COMPLETE.md  TRANSITION_NOTES.md  TVCHART_OPTIMISATIONS.md  cleanup.keep.yml  conftest.py  env.example  journal_tests.md  next.config.js  package-lock.json  package.json  preset_baseline.json  preset_baseline_compat.json  preset_kelly_low_compat.json  preset_vt_high.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_dev.sh  tailwind.config.ts  test_final.py  test_nouvelles_fonctionnalites.md  (+3 more)
.data/: presets.json
_scan/: COMPONENTS_TREE.txt  ENGINE_TREE.txt  README.md  SIZES.txt  SRC_CORE_TREE.txt  TREE_L3.txt
app/: globals.css  layout.tsx  page.tsx
archive/config/config/: pyproject.toml
backend/: __init__.py  app.py  logging_spec.md  main.py  orchestrator.py  requirements.txt  simulator.py  test_api.py
components/: ArchitectureTest.tsx  AutoPresetSelect.tsx  CapsAdjuster.tsx  ChartPane.tsx  CollapsibleCard.tsx  ConfigPanel.tsx  EquityChart.tsx  ExportCSV.tsx  FtmoBadge.tsx  HourRangeInput.tsx  InputForm.tsx  KPICards.tsx  KPIReport.tsx  KpiBar.tsx  KpiBox.tsx  LaunchSimulation.tsx  MarketRegimeTag.tsx  McSummaryChips.tsx  ParamForm.tsx  PresetSelect.tsx  PresetsBar.tsx  PresetsLoader.tsx  ProfileSelect.tsx  ResetStore.tsx  ResultPanel.tsx  RiskChart.tsx  RiskLogViewer.tsx  RiskLoggerTable.tsx  RiskSummary.tsx  RunButtons.tsx  RunJournalPanel.tsx  SimToolbar.tsx  SimulateurMulti.tsx  StatusChips.tsx  TailwindTest.tsx  TelemetryStrip.tsx  TradeHistoryTable.tsx  TradeTable.tsx  UniverseSelector.tsx  UniverseTest.tsx  (+2 more)
config/: requirements.txt
docs/: 01_framework.md  04_tests.md  05_allocation_presets.md  INTERFACE_MC.md  (+11 more)
(+386 files in other folders)
